...
                onDelete: onDelete
            )

            Divider()

            HStack(spacing: FeedSidebarView.bottomBarButtonSpacing) {
                Button("Add feed", action: onAddFeed)
                .help("Add feed")

                Button("Add OPML", action: onAddOPML)
                    .help("Import feeds from an online OPML file")
            }
            .frame(maxWidth: .infinity, alignment: .center)
            .padding(.vertical, FeedSidebarView.bottomBarVerticalPadding)
            .padding(.horizontal, FeedSidebarView.bottomBarHorizontalPadding)
        }
...
